fix overflow-x on struktur organisasi page

--- a/src/pages/StrukturOrganisasi/StrukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/StrukturOrganisasi.css
@@ -8,7 +8,7 @@
 }
 .tree-container {
   background: url("./town.svg");
-  height: 900px;
+  height: 910px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
